...
    }
    Image(
        painter = rememberLottiePainter(
            composition = composition,
            iterations = Compottie.IterateForever
        ),
        contentDescription = "Lottie animation",
        modifier = modifier.fillMaxSize()
    )
}

@Composable
private fun InfiniteAnimation(animation: Animation, modifier: Modifier) {
...
